--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="left">
             <div class="content">
               <h1>Welcome<br><span>to </span><br>my site</h1>
-              <p>Hi ,Im Brittany! Welcome to my site where my world begins.I enjoy computer networking,programming and webdesign.During the day,I am a dispatcher while going to school at night learning more and more.When I am not busy with work or school,I like to dance,spend time with friends and just have fun whatever it may be!</p>
+              <p>Hi ,Im Brittany! Welcome to my site where my world begins.I enjoy computer networking,programming and webdesign.I work in hospitality while going to school at night learning more and more.When I am not busy with work or school,I like to dance,spend time with friends and just have fun whatever it may be!</p>
               
             </div>
           </div>
